// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Users/Header default smoke-test 1`] = `
<div class="flex my-2">
  <div class="avatar flex-none">
    <div class="w-8 h-8 rounded">
      <img class="my-0"
           src="../test-profile-image.jpg"
           alt="DanConwayDev"
      >
    </div>
  </div>
  <div class="flex-auto pl-3 m-auto">
    DanConwayDev
  </div>
</div>
`;

exports[`Users/Header displayName without name smoke-test 1`] = `
<div class="flex my-2">
  <div class="avatar flex-none">
    <div class="w-8 h-8 rounded">
      <img class="my-0"
           src="../test-profile-image.jpg"
           alt="DanConwayDev"
      >
    </div>
  </div>
  <div class="flex-auto pl-3 m-auto">
    DanConwayDev
  </div>
</div>
`;

exports[`Users/Header loading smoke-test 1`] = `
<div class="flex my-2">
  <div class="avatar flex-none">
    <div class="w-8 h-8 rounded skeleton">
    </div>
  </div>
  <div class="flex-auto pl-3 m-auto">
    <div class="w-24 h-4 skeleton">
    </div>
  </div>
</div>
`;

exports[`Users/Header name and displayName shows name smoke-test 1`] = `
<div class="flex my-2">
  <div class="avatar flex-none">
    <div class="w-8 h-8 rounded">
      <img class="my-0"
           src="../test-profile-image.jpg"
           alt="Dan"
      >
    </div>
  </div>
  <div class="flex-auto pl-3 m-auto">
    Dan
  </div>
</div>
`;

exports[`Users/Header no image smoke-test 1`] = `
<div class="flex my-2">
  <div class="avatar flex-none">
    <div class="w-8 h-8 rounded bg-neutral">
    </div>
  </div>
  <div class="flex-auto pl-3 m-auto">
    DanConwayDev
  </div>
</div>
`;

exports[`Users/Header not found smoke-test 1`] = `
<div class="flex my-2">
  <div class="avatar flex-none">
    <div class="w-8 h-8 rounded bg-neutral">
    </div>
  </div>
  <div class="flex-auto pl-3 m-auto">
    npub18669...
  </div>
</div>
`;
